- Upgrading cyberware that is a part of another piece of cyberware no longer causes the cyberware selector form to display an empty list.
- Mastery qualities that are not purchased traditionally no longer deduct free spell points.

Data Changes:
- The Ares Light Fire 75's suppressor is no longer incorrectly referred to as the Ares Light Fire 70's suppressor.
- Added a new PDF Parameter option that is Adobe Acrobat-style, but always opens a new instance of the clicked file.
- Linguistics (the adept power) no longer increases a character's native language limit by 1.

Changed/New Strings:
- MessageTitle_AutosaveFound
- Message_AutosaveFound

Build 213
Application Fixes:
- Added a limited dark mode. The mode can be set and previewed in the Options menu. For existing users, Chummer will default to Light mode; for new users, Chummer will default to automatically checking the setting in Windows for whether apps should run in Light or Dark mode.
- Fixed an incorrect tag on submersion groups in career mode. 
- Fixed incorrect default multiplier for Technomancer Ordeals/Tasks. 
- Fixed a crash when changing priority selection if the character has FreeSpellsSkill improvements (ie Dedicated Spellslinger).
- Fixed a regression in career mode not allowing Initiation Groups to be joined or left properly. Closes #4115
- Fixed a myriad of cases where printing a character sheet in a language that is different from the language being used for the program would sometimes result in incorrect localization and/or number formats being used.
- Fixed qi foci improperly providing free levels of a power rather than free points. Closes #4116
- Qualities that unlock special skills are no longer all always effectively free when purchased traditionally.